-Adjusted z index to make sure nav does not overlap in any case with other elements

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,7 +8,7 @@ nav {
   padding-right: 1.5em;
   padding-left: 1.5em;
   padding-top: 1.5em;
-  z-index: 1;
+  z-index: 99;
   position: fixed;
   width: 100%;
 }
